2007-04-13  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	Fix removal of linked sources.
	Raise an exception if we try to remove a source while collapsing the
	neighbours but not removing the linked object.
	* pitivi/timeline/source.py:
	Give a better name to brothers of TimelineFileSource to make it easier
	to spot them in debug logs.
	* tests/common.py:
	Allow setting durations on TestFileSourceFactory, with a default of 1s.
	* tests/test_timeline_composition.py:
	Added tests for insertSourceAfter, prependSource and removeSource

2007-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	Fixup and document Composition.appendsource()
	Minor cleanups
	* pitivi/ui/sourcefactories.py:
	Make the explanation text centered.
	* tests/common.py:
	Add a few things to TestFileSourceFactory.__init__
	* tests/test_timeline_composition.py:
	New test file for pitivi.timeline.composition behaviour.

2007-04-04  Edward Hervey  <edward@fluendo.com>

	* tests/common.py:
	Some systems/python don't like doing in-depth import.

2007-03-31  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/source.py:
	Set initial values for TimelineSource media_start and media_duration
	* tests/common.py:
	New TimelineFileSource and FileSourceFactory test objects
	* tests/test_timeline_source.py:
	Test some behaviour of TimelineFileSource
	Fixes #424228

2007-03-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/objects.py:
	Add a getBrother() method to BrotherObjects.
	small cleanups
	* tests/Makefile.am:
	* tests/common.py:
	New file to contain the test pitivi objects
	* tests/test_timeline_objects.py:
	Unit test for the pitivi.timeline.objects file.
	Only contains tests for the BrotherObjects, still need to add tests
	for the TimelineObjects.

2007-03-27  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	Separate the gtk mainloop handling outside of the Pitivi class.